# veriwasm

./: Cargo.toml
src/: lib.rs
src/analyses/: heap_analyzer.rs  mod.rs
src/checkers/: heap_checker.rs  mod.rs
src/ir/: cfg.rs  mod.rs  types.rs  x64.rs
src/lattices/: heaplattice.rs  mod.rs  regslattice.rs  stacklattice.rs
src/loaders/: types.rs
src/runner/: mod.rs
